force-app/main/default/objects/Master_Test_Case__c/Master_Test_Case__c.object-meta.xml
<CustomObject>
    <label>Master Test Case</label>
    <nameField>
        <displayFormat>MTC-{0000}</displayFormat>
        <label>Master Test Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>