force-app/main/default/objects/Master_Test_Case__c/fields/Engineering_Notes__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Notes__c</fullName>
    <description>Field added for the engineering team to be able to add additional notes regarding test cases (i.e. changes)</description>
    <label>Engineering Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>