force-app/main/default/objects/Master_Test_Case__c/fields/Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>Expected_Result__c</fullName>
    <label>Expected Result</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>