force-app/main/default/objects/Master_Test_Case__c/fields/of_Failed_Test_Cases__c.field-meta.xml
<CustomField>
    <fullName>of_Failed_Test_Cases__c</fullName>
    <label># of Failed Test Cases</label>
    <summaryFilterItems>
        <field>Test_Cases__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending Issue</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Test_Cases__c.Production_Test__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Cases__c.Master_Test_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>