force-app/main/default/objects/Master_Test_Case__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <length>255</length>
    <type>Text</type>
</CustomField>