force-app/main/default/objects/Master_Test_Case__c/fields/Prerequisites_and_Data__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites_and_Data__c</fullName>
    <label>Prerequisites and Data</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>