force-app/main/default/objects/Master_Test_Case__c/fields/Remaining_Test_Cases__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Test_Cases__c</fullName>
    <formula>of_Valid_Test_Cases__c - of_Passed_Test_Cases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Test Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>