force-app/main/default/objects/Master_Test_Case__c/fields/Requirement_ID__c.field-meta.xml
<CustomField>
    <fullName>Requirement_ID__c</fullName>
    <label>Requirement ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>