force-app/main/default/objects/Master_Test_Case__c/fields/Scenario_ID__c.field-meta.xml
<CustomField>
    <fullName>Scenario_ID__c</fullName>
    <description>This field maps to the Scenario ID provided by CDC</description>
    <inlineHelpText>This field maps to the Scenario ID provided by CDC</inlineHelpText>
    <label>Scenario ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>