force-app/main/default/objects/Master_Test_Case__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <inlineHelpText>Sort Order is 1-30</inlineHelpText>
    <label>Sort Order</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>