force-app/main/default/objects/Master_Test_Case__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
        of_Failed_Test_Cases__c &gt; 0,
        &quot;Pending Issue&quot;,
     IF(
         AND(
             of_Passed_Test_Cases__c = of_Valid_Test_Cases__c,
             of_Passed_Test_Cases__c &gt; 0
         ),
         &quot;Pass&quot;,
         IF(
             OR(
                 of_In_Progress_Test_Cases__c &gt; 0,
                 of_Passed_Test_Cases__c &gt; 0,
                 of_Ready_For_Retest_Test_Cases__c &gt; 0,
                 of_Failed_Test_Cases__c &gt; 0
              ),
             &quot;In Progress&quot;,
             &quot;Not Started&quot;
         )
     )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>