force-app/main/default/objects/Master_Test_Case__c/fields/Steps_to_Test__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Test__c</fullName>
    <label>Steps to Test</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>