force-app/main/default/objects/Master_Test_Case__c/fields/Test_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Test_Scenario__c</fullName>
    <description>This field maps to the Test Scenario provided by CDC</description>
    <inlineHelpText>This field maps to the Test Scenario provided by CDC</inlineHelpText>
    <label>Test Scenario</label>
    <type>TextArea</type>
</CustomField>