force-app/main/default/objects/Master_Test_Case__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>