force-app/main/default/objects/Master_Test_Case__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <label>User Story</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>