force-app/main/default/objects/Master_Test_Case__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>This field is used to distinguish the test case version for test cases that have been revised</description>
    <inlineHelpText>This field is used to distinguish the test case version for test cases that have been revised</inlineHelpText>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>