force-app/main/default/objects/Master_Test_Case__c/recordTypes/Master_Test_Case.recordType-meta.xml
<RecordType>
    <fullName>Master_Test_Case</fullName>
    <active>true</active>
    <label>Master Test Case</label>
</RecordType>