force-app/main/default/objects/Master_Test_Case__c/recordTypes/Master_Test_Case_Classic.recordType-meta.xml
<RecordType>
    <fullName>Master_Test_Case_Classic</fullName>
    <active>true</active>
    <label>Master Test Case (Classic)</label>
</RecordType>