force-app/main/default/objects/Master_Test_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Test_Category__c</columns>
    <columns>Completion_Percentage__c</columns>
    <columns>Remaining_Test_Cases__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Status__c</columns>
    <columns>Scenario_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>