force-app/main/default/objects/Master_Test_Case__c/listViews/All_Master_Test_Cases.listView-meta.xml
<ListView>
    <fullName>All_Master_Test_Cases</fullName>
    <columns>NAME</columns>
    <columns>Test_Category__c</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>of_Valid_Test_Cases__c</columns>
    <columns>of_Passed_Test_Cases__c</columns>
    <columns>of_Failed_Test_Cases__c</columns>
    <columns>of_In_Progress_Test_Cases__c</columns>
    <columns>of_Ready_For_Retest_Test_Cases__c</columns>
    <columns>Completion_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Master Test Cases</label>
</ListView>