force-app/main/default/objects/Master_Test_Case__c/listViews/BGR_Master_Test_Cases.listView-meta.xml
<ListView>
    <fullName>BGR_Master_Test_Cases</fullName>
    <columns>NAME</columns>
    <columns>Test_Scenario__c</columns>
    <columns>Test_Script_ID__c</columns>
    <columns>Title__c</columns>
    <columns>User_Story__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Category__c</field>
        <operation>equals</operation>
        <value>BGR Part Configurator</value>
    </filters>
    <label>BGR Master Test Cases</label>
</ListView>